--- a/values.d/ombi.yaml
+++ b/values.d/ombi.yaml
@@ -4,14 +4,14 @@ ingress:
     annotations:
       cert-manager.io/cluster-issuer: vault-issuer
     hosts:
-    - host: radarr.dc
+    - host: ombi.dc
       paths:
       - path: /
         pathType: Prefix
     tls:
-    - secretName: radarr-tls
+    - secretName: ombi-tls
       hosts:
-      - radarr.dc
+      - ombi.dc
 
 securityContext:
   privileged: false
@@ -23,14 +23,3 @@ persistence:
     storageClass: local-path
     accessMode: ReadWriteOnce
     size: 1Gi
-  media:
-    enabled: true
-    type: hostPath
-    mountPath: /movies
-    hostPath: /data/media/movies
-  downloads:
-    enabled: true
-    type: hostPath
-    mountPath: /downloads
-    hostPath: /data/torrent
-    
