argocd webhook user

--- a/charts/heqet/projects/argocd/values/argocd.yaml
+++ b/charts/heqet/projects/argocd/values/argocd.yaml
@@ -107,6 +107,7 @@ server:
   config:
     # Argo CD's externally facing base URL (optional). Required when configuring SSO
     url: https://argocd.dc
+    accounts.webhook: apiKey, login
    # oidc.config: |
    #   name: Keycloak
    #   issuer: https://keycloak.dc/auth/realms/LAN
