--- a/charts/heqet/Chart.yaml
+++ b/charts/heqet/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
 appVersion: "1.0"
-description: Heqet-Bootstrap ArgoCD App-of-Apps Boilerplate
+description: Simple ArgoCD App-of-Apps Bootstrapping Boilerplate
 name: heqet
 version: 2.0.0
