--- a/charts/heqet/projects/arrstack/project.yaml
+++ b/charts/heqet/projects/arrstack/project.yaml
@@ -2,39 +2,37 @@
 config:
   description: Arrr I'm a pirate!
   syncWave: 100
+
+  # All apps share the same repo, so lets be lazy:
+  #repoURL: https://k8s-at-home.com/charts/
+  repo: k8s-at-home
  
 apps:
 - name: ombi
   namespace: ombi
-  repoURL: https://k8s-at-home.com/charts/
   chart: ombi
   targetRevision: 11.0.0
 
 - name: jackett
   namespace: jackett
-  repoURL: https://k8s-at-home.com/charts/
   chart: jackett
   targetRevision: 11.0.0
 
 - name: sonarr
   namespace: sonarr
-  repoURL: https://k8s-at-home.com/charts/
   chart: sonarr
   targetRevision: 14.0.0
 
 - name: radarr
   namespace: radarr
-  repoURL: https://k8s-at-home.com/charts/
   chart: radarr
   targetRevision: 13.0.0
 
 - name: lidarr
   namespace: lidarr
-  repoURL: https://k8s-at-home.com/charts/
   chart: lidarr
   targetRevision: 12.0.1
 
 - name: bazarr
-  repoURL: https://k8s-at-home.com/charts/
   chart: bazarr
   targetRevision: 10.0.0
