--- a/charts/heqet/projects/falco/values/falco.yaml
+++ b/charts/heqet/projects/falco/values/falco.yaml
@@ -7,6 +7,9 @@ podSecurityPolicy:
 containerd:
   enabled: true
 
+extraArgs:
+  - --disable-cri-async
+
 falco:
   timeFormatISO8601: true
   grpc:
