--- a/charts/heqet/projects/arrstack/project.yaml
+++ b/charts/heqet/projects/arrstack/project.yaml
@@ -33,6 +33,10 @@ apps:
   chart: lidarr
   targetRevision: 12.0.1
 
+- name: readarr
+  chart: readarr
+  targetRevision: 6.0.1
+
 - name: bazarr
   chart: bazarr
   targetRevision: 10.0.0
