Fix(pyload): download hostPath

--- a/charts/heqet/projects/downloader/values/pyload.yaml
+++ b/charts/heqet/projects/downloader/values/pyload.yaml
@@ -28,10 +28,7 @@ persistance:
 
   # use hostpath instead
   downloads:
-    enabled: false
-
-hostPathMounts:
-  - name: downloads
     enabled: true
-    mountPath: /downloads
+    type: hostPath
     hostPath: /data/downloads
+    mountPath: /downloads
