--- a/charts/heqet/projects/core/project.yml
+++ b/charts/heqet/projects/core/project.yml
@@ -1,55 +1,45 @@
 config:
   description: Core Components for Kubernetes
-
 apps:
-  # Persistant Storage Local-Path Provosioner
-  - name: fast-storage
-    namespace: fast-storage
-    repoURL: https://github.com/rancher/local-path-provisioner
-    path: deploy/chart
-    syncWave: "0"
-    parameters:
-      - name: storageClass.name
-        value: fast
-      - name: nodePathMap[0].node
-        value: DEFAULT_PATH_FOR_NON_LISTED_NODES
-      - name: nodePathMap[0].paths[0]
-        value: /var/lib/rancher/k3s/storage
-
-  # Metal LoadBalancer
-  - name: metallb
-    repoURL: https://charts.bitnami.com/bitnami
-    chart: metallb
-    namespace: metallb
-    targetRevision: 2.5.4
-    syncWave: "0"
-
-  # Cert Manager Vault & ACME
-  - name: cert-manager
-    namespace: cert-manager
-    repoURL: https://charts.jetstack.io
-    chart: cert-manager
-    targetRevision: 1.5.3
-    parameters:
-      - name: installCRDs
-        value: "true"
-    secrets:
-      - name: cert-manager-vault-approle
-        keys:
-          - secretId
-
-  # NGINX Ingress - Internal
-  - name: ingress-internal
-    namespace: ingress-internal
-    repoURL: https://kubernetes.github.io/ingress-nginx
-    chart: ingress-nginx
-    targetRevision: 4.0.1
-    syncWave: "0"
-
-  # NGINX Ingress - External
-  - name: ingress-external
-    namespace: ingress-external
-    repoURL: https://kubernetes.github.io/ingress-nginx
-    chart: ingress-nginx
-    targetRevision: 4.0.1
-    syncWave: "0"
+- name: fast-storage
+  namespace: fast-storage
+  repoURL: https://github.com/rancher/local-path-provisioner
+  path: deploy/chart
+  syncWave: '0'
+  parameters:
+  - name: storageClass.name
+    value: fast
+  - name: nodePathMap[0].node
+    value: DEFAULT_PATH_FOR_NON_LISTED_NODES
+  - name: nodePathMap[0].paths[0]
+    value: /var/lib/rancher/k3s/storage
+- name: metallb
+  repoURL: https://charts.bitnami.com/bitnami
+  chart: metallb
+  namespace: metallb
+  targetRevision: 2.5.6
+  syncWave: '0'
+- name: cert-manager
+  namespace: cert-manager
+  repoURL: https://charts.jetstack.io
+  chart: cert-manager
+  targetRevision: 1.5.3
+  parameters:
+  - name: installCRDs
+    value: 'true'
+  secrets:
+  - name: cert-manager-vault-approle
+    keys:
+    - secretId
+- name: ingress-internal
+  namespace: ingress-internal
+  repoURL: https://kubernetes.github.io/ingress-nginx
+  chart: ingress-nginx
+  targetRevision: 4.0.1
+  syncWave: '0'
+- name: ingress-external
+  namespace: ingress-external
+  repoURL: https://kubernetes.github.io/ingress-nginx
+  chart: ingress-nginx
+  targetRevision: 4.0.1
+  syncWave: '0'
