add: NetworkPolicy for Minio & added to drone

--- a/charts/heqet/resources/networkpolicy.yml
+++ b/charts/heqet/resources/networkpolicy.yml
@@ -110,3 +110,16 @@ networkPolicy:
         - namespaceSelector:
             matchLabels:
               app.heqet.gnu.one/name: drone-runner
+
+    allow-minio:
+      podSelector: {}
+      policyTypes:
+      - Egress
+      egress:
+      - ports:
+        - port: 9000
+          protocol: TCP
+        to:
+        - namespaceSelector:
+            matchLabels:
+              name: minio
