--- a/charts/heqet/projects/efk/values/fluentd.yaml
+++ b/charts/heqet/projects/efk/values/fluentd.yaml
@@ -18,11 +18,21 @@ forwarder:
         password  "#{ENV['FLUENT_ELASTICSEARCH_PASSWORD']}"
         port 9200
         logstash_format true
+        include_tag_key true
+        reload_connections false
+        reconnect_on_error true
+        reload_on_failure true
+        suppress_type_name true
         <buffer>
           @type file
           path /opt/bitnami/fluentd/logs/buffers/logs.buffer
           flush_thread_count 2
           flush_interval 5s
+          retry_forever
+          retry_max_interval 30
+          chunk_limit_size 2M
+          total_limit_size 500M
+          overflow_action block
         </buffer>
       </match>
     fluentd-inputs.conf: |
