--- a/charts/heqet/projects/woodpecker/values/woodpecker-server.yaml
+++ b/charts/heqet/projects/woodpecker/values/woodpecker-server.yaml
@@ -5,18 +5,21 @@ image:
   repository: woodpeckerci/woodpecker-server
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "v0.14"
+  tag: "latest"
 
 env:
-  DRONE_OPEN: "true"
-  DRONE_ADMIN: "nold360"
-  DRONE_HOST: https://ci.nold.in
-  DRONE_GITHUB: true
-  #DRONE_REPO_OWNERS: "nold360"
+  WOODPECKER_OPEN: "false"
+  WOODPECKER_ADMIN: "Nold360"
+  WOODPECKER_HOST: https://ci.nold.in
+  WOODPECKER_GITHUB: "true"
+  #WOODPECKER_REPO_OWNERS: "nold360"
 
   HTTP_PROXY: http://proxy-squid.proxy.svc.cluster.local
   HTTPS_PROXY: http://proxy-squid.proxy.svc.cluster.local
+  http_proxy: http://proxy-squid.proxy.svc.cluster.local
+  https_proxy: http://proxy-squid.proxy.svc.cluster.local
   NO_PROXY: localhost,.cluster.local
+  no_proxy: localhost,.cluster.local
 
 
 extraSecretNamesForEnvFrom:
@@ -26,7 +29,7 @@ extraSecretNamesForEnvFrom:
 persistentVolume:
   enabled: true
   size: 10Gi
-  mountPath: "/var/lib/drone"
+  mountPath: "/var/lib/woodpecker"
   storageClass: "local-path"
 
 podAnnotations: {}
