--- a/charts/heqet/projects/woodpecker/values/woodpecker-agent.yaml
+++ b/charts/heqet/projects/woodpecker/values/woodpecker-agent.yaml
@@ -5,20 +5,20 @@ image:
   repository: woodpeckerci/woodpecker-agent
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "v0.14"
+  tag: "latest"
 
 env:
-  DRONE_SERVER: "woodpecker-server.woodpecker-server.svc.cluster.local:9000"
+  WOODPECKER_SERVER: "woodpecker-server.woodpecker-server.svc.cluster.local:9000"
 
 extraSecretNamesForEnvFrom:
 - woodpecker-secret
 
 podAnnotations: {}
 
-podSecurityContext: {}
+podSecurityContext:
   fsGroup: 2000
 
-securityContext: {}
+securityContext:
   capabilities:
     drop:
     - ALL
@@ -26,7 +26,7 @@ securityContext: {}
   runAsNonRoot: true
   runAsUser: 1000
 
-resources: {}
+resources:
   limits:
     cpu: 500m
     memory: 512Mi
