--- a/charts/heqet/projects/arrstack/values/ombi.yaml
+++ b/charts/heqet/projects/arrstack/values/ombi.yaml
@@ -14,7 +14,8 @@ ingress:
       - ombi.dc
 
 securityContext:
-  privileged: false
+  runAsNonRoot: false
+  readOnlyRootFilesystem: false
 
 persistence:
   config:
