--- a/charts/heqet/templates/manifests.yaml
+++ b/charts/heqet/templates/manifests.yaml
@@ -1,5 +1,5 @@
 {{/* Collect local manifests */}}
-{{- range $path, $_ := $.Files.Glob "resources/manifests/*.y*ml" }}
+{{- range $path, $_ := $.Files.Glob (printf "%s/resources/manifests/*.y*ml" $.Values.userdata) }}
 ---
 {{ $.Files.Get $path }}
 {{- end }}
