Update(argocd): v2.2.0-rc1

--- a/charts/heqet/projects/argocd/values/argocd.yaml
+++ b/charts/heqet/projects/argocd/values/argocd.yaml
@@ -6,9 +6,9 @@
 installCRDs: true
 
 global:
-#  image:
-#    repository: quay.io/argoproj/argocd
-#    tag: #v2.0.0
+  image:
+    repository: quay.io/argoproj/argocd
+    tag: v2.2.0-rc1
 #    imagePullPolicy: IfNotPresent
   securityContext:
     runAsUser: 999
