--- a/charts/heqet/projects/falco/project.yml
+++ b/charts/heqet/projects/falco/project.yml
@@ -2,6 +2,7 @@ config:
   description: Falco Security
 apps:
 - name: falco
+  disabled: true
   repoURL: https://falcosecurity.github.io/charts
   chart: falco
   targetRevision: 1.16.0
