Change: public jellyfin

--- a/charts/heqet/projects/jellyfin/project.yaml
+++ b/charts/heqet/projects/jellyfin/project.yaml
@@ -2,7 +2,14 @@ config:
   description: Stream stuff
   syncWave: 100
   repo: k8s-at-home
+  networkPolicy:
+    groups:
+    - internet
+ 
 apps:
 - name: jellyfin
   chart: jellyfin
   targetRevision: 9.1.0
+  include:
+  - noRoot
+  - tmpdirs
